# pag-kmp

./: .gitignore  .gitmodules  README.md  build.gradle.kts  libs.versions.toml  settings.gradle.kts
.github/workflows/: build.yml  publish.yml
example/: build.gradle.kts  example.podspec
example/iosApp/: Podfile
example/iosApp/Configuration/: Config.xcconfig
example/iosApp/iosApp/: ContentView.swift
example/iosApp/iosApp.xcodeproj/: project.pbxproj
example/iosApp/iosApp.xcodeproj/xcshareddata/xcschemes/: iosApp.xcscheme
example/src/androidMain/: AndroidManifest.xml
example/src/androidMain/kotlin/love/yinlin/libpag/example/: MainActivity.kt
example/src/commonMain/kotlin/love/yinlin/libpag/example/: PAGApp.kt
example/src/desktopMain/kotlin/love/yinlin/libpag/example/: Main.kt
example/src/iosMain/kotlin/love/yinlin/libpag/example/: MainViewController.kt
example/src/wasmJsMain/kotlin/love/yinlin/libpag/example/: main.kt
example/src/wasmJsMain/resources/: index.html
example/webpack.config.d/: webpack.config.js
gradle/: libs.versions.toml
pag4j/: build.bat  build.gradle.kts  build.sh
pag4j/src/main/cpp/: CMakeLists.txt  JNIHelper.cpp  JNIHelper.h  JPAG.cpp  JPAGComposition.cpp  JPAGFile.cpp  JPAGLayer.cpp  JPAGPlayer.cpp  JPAGSurface.cpp  JStringUtil.cpp  Log.h
pag4j/src/main/java/org/libpag/: LibraryLoadUtils.java  PAG.java  PAGComposition.java  PAGFile.java  PAGLayer.java  PAGPlayer.java  PAGRect.java  PAGSurface.java
